# kripto-bot

./: .env.example  .gitignore  AGENTS.md  GITHUB_DEPLOY.md  MONITORING-WALLET-BOOST.md  README.md  SETUP.md  docker-compose.override.yml  docker-compose.yml  phase-decision-wrapper.ps1  test_runner_full.py  test_runner_perf.py  test_signal_gen.py
backend/: Dockerfile  alembic.ini  pyproject.toml  run_demo.py  test_runner_steps.py  test_signal_gen50.py
backend/alembic/: env.py
backend/alembic/versions/: 7c89fc0a5082_widen_numeric_precision_on_signal_.py  bc7c0224659c_make_wallet_tx_market_nullable.py  c24ff46d12e1_widen_wallet_score_precision.py  e475c08e6e81_initial_20_table_schema.py
backend/app/: config.py  dependencies.py  logging_config.py  main.py  worker.py
backend/app/analytics/: alpha_persistence.py  market_heatmap.py  metrics.py  pnl.py  reports.py  timing_analysis.py  wallet_alpha.py  wallet_clustering.py
backend/app/api/: router.py
backend/app/execution/: book_walker.py  delay_model.py  exit_engine.py  fee_model.py  fill_model.py  paper_executor.py  slippage_model.py  stoikov.py
backend/app/ingestion/: event_normalizer.py  event_store.py  jobs.py  live_ingestion.py  mock_adapter.py  polymarket_rest.py  polymarket_ws.py  rate_limiter.py
backend/app/intelligence/: leader_impact.py  wallet_alpha.py  wallet_classifier.py  wallet_discovery.py  wallet_scorer.py  wallet_tracker.py
backend/tests/: conftest.py  test_bayesian.py  test_book_walker.py  test_edge.py  test_kelly.py  test_monte_carlo.py  test_spread.py  test_stoikov.py
(+84 files in other folders)
